--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:orientation="vertical"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:orientation="vertical"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -25,6 +25,7 @@
             android:name=".Home_activity"
             android:label="@string/title_activity_home_activity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".FeeDetails"></activity>
     </application>
 
 </manifest>
