--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".FeeDetails" />
         <activity android:name=".FeeDetail_activity" />
-        <activity android:name=".Fee_activity"></activity>
+        <activity android:name=".Fee_activity" />
+        <activity android:name=".Attendance_activity"></activity>
     </application>
 
 </manifest>
