--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
         <activity android:name=".FacPortionActivity" />
         <activity android:name=".FacPortionUpdateActivity" />
         <activity android:name=".FacAnnounceAddActivity"></activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
