fac app profile updated and completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity android:name=".Test_activity" />
         <activity android:name=".Assignment_activity" />
         <activity android:name=".Portion_activity" />
-        <activity android:name=".Faculty_Home_Activity" />
+        <activity android:name=".Faculty_Home_Activity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".FacSalaryActivity" />
         <activity android:name=".FacAttendActivity" />
         <activity android:name=".FacStudAttendActivity" />
