--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:orientation="vertical"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".Splashscreen"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,30 +23,77 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".Home_activity"
             android:label="@string/title_activity_home_activity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Fee_activity" />
-        <activity android:name=".Attendance_activity" />
-        <activity android:name=".Test_activity" />
-        <activity android:name=".Assignment_activity" />
-        <activity android:name=".Portion_activity" />
+        <activity
+            android:name=".Fee_activity"
+            android:label="@string/Fee_activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Attendance_activity"
+            android:label="@string/Attendance_activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Test_activity"
+            android:label="@string/Test_activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Assignment_activity"
+            android:label="@string/Assignment_activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Portion_activity"
+            android:label="@string/Portion_activity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Faculty_Home_Activity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".FacSalaryActivity" />
-        <activity android:name=".FacAttendActivity" />
-        <activity android:name=".FacStudAttendActivity" />
-        <activity android:name=".FacAnnouncActivity" />
-        <activity android:name=".FacPortionActivity" />
-        <activity android:name=".FacPortionUpdateActivity" />
-        <activity android:name=".FacAnnounceAddActivity" />
+        <activity
+            android:name=".FacSalaryActivity"
+            android:label="@string/FacSalaryActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".FacAttendActivity"
+            android:label="@string/FacAttendActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".FacStudAttendActivity"
+            android:label="@string/FacStudAttendActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".FacPortionUpdateActivity"
+            android:label="@string/FacPortionTabActivity"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".FacPortionTabActivity"></activity>
+        <activity
+            android:name=".FacPortionTabActivity"
+            android:label="@string/FacPortionTabActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Fac_Announc_tabbActivity"
+            android:label="@string/Fac_Announc_tabbActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".Fee_tabedActivity"
+            android:label="@string/Fee_tabedActivity"></activity>
     </application>
 
 </manifest>
