--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".GlobalVariable"
@@ -14,9 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:screenOrientation="portrait"
             android:name=".Splashscreen"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -96,7 +97,10 @@
             android:label="@string/Fee_tabedActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".Fac_PortionListView_Activity" />
-        <activity android:name=".Stud_portionList_Activity"></activity>
+        <activity android:name=".Stud_portionList_Activity" />
+        <activity android:name=".Announc_Activity"
+            android:screenOrientation="portrait"
+            android:label="@string/Fac_Announc_tabbActivity"></activity>
     </application>
 
 </manifest>
